<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_passcode"
        android:name="ru.ptsecurity.navigation_example.ui.pincode.PasscodeFragment"
        android:label="@string/title_passcode"
        tools:layout="@layout/fragment_passcode">
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.ptsecurity.navigation_example.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action android:id="@+id/toFirst"
            app:destination="@+id/navigation_first">
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_private"
        android:name="ru.ptsecurity.navigation_example.ui.private.PrivateFragment"
        android:label="@string/title_private"
        tools:layout="@layout/fragment_private" />

    <fragment
        android:id="@+id/navigation_first"
        android:name="ru.ptsecurity.navigation_example.ui.stack.FirstFragment"
        android:label="@string/title_stack"
        tools:layout="@layout/fragment_first">
        <action android:id="@+id/toSecond"
            app:destination="@+id/navigation_second">
        </action>
        <argument
            android:name="textFirst"
            app:argType="string"
            android:defaultValue=""/>
    </fragment>

    <fragment
        android:id="@+id/navigation_second"
        android:name="ru.ptsecurity.navigation_example.ui.stack.SecondFragment"
        android:label="@string/title_stack"
        tools:layout="@layout/fragment_second">
        <argument
            android:name="textSecond"
            app:argType="string"
            android:defaultValue=""/>
        <action android:id="@+id/toFirst"
            app:destination="@+id/navigation_first">
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_deferred"
        android:name="ru.ptsecurity.navigation_example.ui.deferred.DeferredFragment"
        android:label="@string/title_deferred"
        tools:layout="@layout/fragment_deferred" />

</navigation>